make menu links urls and improve link handling

--- a/views/base.jade
+++ b/views/base.jade
@@ -20,16 +20,16 @@ html
                                 a#search-type-users.btn-mini: i.icon-user
                             i.icon-search
                             input(placeholder="Search...", autocapitalize="off", autocorrect="off")
-                    li: a.load-stream
+                    li: a(href="/stream")
                         i.icon-leaf
                         |  Stream
-                    li: a.load-favorites
+                    li: a(href="/favorites")
                         i.icon-heart
                         |  Favorites
-                    li: a.load-following
+                    li: a(href="/followings")
                         i.icon-share-alt
                         |  Following
-                    li: a.load-followers
+                    li: a(href="/followers")
                         i.icon-reply
                         |  Followers
                 .controls
