--- a/static/css/dark.sass
+++ b/static/css/dark.sass
@@ -55,7 +55,7 @@ body
                 &:after
                     color: #000
         
-        #now_playing .song
+        #now_playing .track
             color: #eee
             border-bottom: 1px solid #222
 
