--- a/static/css/light.sass
+++ b/static/css/light.sass
@@ -9,6 +9,18 @@
     background: #fff
     border-left: 1px solid #eee
 
+.block
+    background: #f9f9f9
+    border-bottom: 1px solid #e6e6e6
+
+.tabs
+    .tab
+        background: #eee
+        border-bottom: 1px solid #ddd
+        &.selected
+            background: #fff
+            border-bottom-color: #fff
+
 #menu
     ul
         li
@@ -30,3 +42,6 @@
 
 .loading
     background: #f6f6f6
+
+.tab-content .loading
+    background: #fff
