--- a/views/tracks.jade
+++ b/views/tracks.jade
@@ -1,6 +1,6 @@
 ul
     each track in tracks
-        li: a(href="/track/#{ track.id }")
+        li: a.track(href="/play/#{ track.id }")
             img(src=track.artwork_url)
             strong= track.user.username
             |  - #{ track.title }
