improve user and track views

--- a/static/css/light.sass
+++ b/static/css/light.sass
@@ -21,6 +21,9 @@
             background: #fff
             border-bottom-color: #fff
 
+#content ul li
+    border-bottom: 1px solid #f6f6f6
+
 #menu
     ul
         li
