--- a/views/user.jade
+++ b/views/user.jade
@@ -8,7 +8,7 @@
     .tabs.four
         a.tab.selected(href="/users/#{ user.id }/tracks"): span Tracks
         a.tab(href="/users/#{ user.id }/favorites"): span Favorites
-        a.tab(href="/users/#{ user.id }/followings"): span Followings
+        a.tab(href="/users/#{ user.id }/followings"): span Following
         a.tab(href="/users/#{ user.id }/followers"): span Followers
     .tab-content
 
