--- a/static/css/base.sass
+++ b/static/css/base.sass
@@ -192,6 +192,7 @@ a
         font-weight: bold
     img.avatar
         float: left
+        top: 0
         height: 40px
         margin-top: 5px
         margin-right: 10px
@@ -234,7 +235,7 @@ a
                 display: block
                 padding: 5px 7px 9px
                 position: relative
-.track
+.track, .user
     img
         position: relative
         top: 5px
