refactor to use backbone router; add track routes and comment view

--- a/views/base.jade
+++ b/views/base.jade
@@ -52,6 +52,8 @@ html
                 .container
 
         script(src="/js/jquery.min.js")
+        script(src="/js/underscore-min.js")
+        script(src="/js/backbone-min.js")
         script(src="/js/hammer.min.js")
         script(src="/js/base.js")
         script#loading-template(type="text/html")
