--- a/views/user.jade
+++ b/views/user.jade
@@ -6,7 +6,7 @@
     .clear
 .tabbed
     .tabs.four
-        a.tab.selected(href="/users/#{ user.id }/tracks"): span Tracks
+        a.tab(href="/users/#{ user.id }/tracks"): span Tracks
         a.tab(href="/users/#{ user.id }/favorites"): span Favorites
         a.tab(href="/users/#{ user.id }/followings"): span Following
         a.tab(href="/users/#{ user.id }/followers"): span Followers
