--- a/static/css/base.sass
+++ b/static/css/base.sass
@@ -181,6 +181,12 @@ a
 
 .block
     padding: 10px
+    position: relative
+
+    .right
+        position: absolute
+        top: 10px
+        right: 10px
 
 .user
     .details
@@ -190,12 +196,6 @@ a
         margin-top: 5px
         font-size: 20px
         font-weight: bold
-    img.avatar
-        float: left
-        top: 0
-        height: 40px
-        margin-top: 5px
-        margin-right: 10px
 
 .clear
     clear: left
@@ -211,6 +211,9 @@ a
             padding: 4px
             border-radius: 4px
             font-weight: bold
+    &.two
+        .tab
+            width: 50%
     &.four
         .tab
             width: 25%
@@ -235,13 +238,20 @@ a
                 display: block
                 padding: 5px 7px 9px
                 position: relative
-.track, .user
-    img
-        position: relative
-        top: 5px
-        margin-left: 1px
-        margin-right: 7px
-        height: 20px
+
+img.avatar
+    float: left
+    top: 0
+    height: 40px
+    margin-top: 5px
+    margin-right: 10px
+
+img.mini-avatar
+    position: relative
+    top: 5px
+    margin-left: 1px
+    margin-right: 7px
+    height: 20px
 
 @media (min-width: 600px)
     a.btn.menu
