--- a/views/now_playing.jade
+++ b/views/now_playing.jade
@@ -1,4 +1,4 @@
-.track
-    img(src=song.artwork_url)
-    strong= song.user.username
-    |  - #{ song.title }
+.track(data-track_id=track.id)
+    img.mini-avatar(src=track.artwork_url)
+    strong= track.user.username
+    |  - #{ track.title }
