--- a/views/track.jade
+++ b/views/track.jade
@@ -1,11 +1,15 @@
 .block.track
+    .right
+        a.play(data-track_id=track.id): i.icon-play
     a(href="/users/#{ track.user.id }")= track.user.username
-    img.artwork(src=track.artwork_url)
+    img.avatar(src=track.artwork_url)
     .details
         h1.title= track.title
     .clear
 .tabbed
-    .tabs.four
+    .tabs.two
+        a.tab(href="/tracks/#{ track.id }/comments"): span Comments
+        a.tab(href="/tracks/#{ track.id }/favoriters"): span Favoriters
     .tab-content
 
 
