make light theme default

--- a/views/base.jade
+++ b/views/base.jade
@@ -7,7 +7,7 @@ html
         meta(name="apple-mobile-web-app-status-bar-style", content="black")
         link(rel="stylesheet", type="text/css", href="/css/font-awesome.min.css")
         link(rel="stylesheet", href="/css/base.css")
-        link(rel="stylesheet", href="/css/#{ theme || 'dark' }.css")
+        link(rel="stylesheet", href="/css/#{ theme || 'light' }.css")
 
     body(ontouchstart="")
         #main
